Button functionality completed and minor design changes

--- a/index.html
+++ b/index.html
@@ -6,20 +6,24 @@
         <div id="hero">
             <div class="column" id="home" c;a>
                 <h1>HOME</h1>
-                <h2 class="score">0</h2>
+                <div class="score-background">
+                    <h2 id="home-score" class="score">0</h2>
+                </div>
                 <div class="button-collection">
-                    <button>+1</button>
-                    <button>+2</button>
-                    <button>+3</button>
+                    <button onclick="homePlus1()">+1</button>
+                    <button onclick="homePlus2()">+2</button>
+                    <button onclick="homePlus3()">+3</button>
                 </div>
             </div>
             <div class="column" id="away">
                 <h1>AWAY</h1>
-                <h2 class="score">0</h2>
+                <div class="score-background">
+                    <h2 id="away-score" class="score">0</h2>
+                </div>
                 <div class="button-collection">
-                    <button>+1</button>
-                    <button>+2</button>
-                    <button>+3</button>
+                    <button onclick="awayPlus1()">+1</button>
+                    <button onclick="awayPlus2()">+2</button>
+                    <button onclick="awayPlus3()">+3</button>
                 </div>
             </div>
         </div>
