Added a score dot that will appear under which ever team is currently winning. Also added a new game button that would resets the score

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
                     <button onclick="homePlus2()">+2</button>
                     <button onclick="homePlus3()">+3</button>
                 </div>
+                <p class="dot" id="home-winning"></p>
             </div>
             <div class="column" id="away">
                 <h1>AWAY</h1>
@@ -25,7 +26,11 @@
                     <button onclick="awayPlus2()">+2</button>
                     <button onclick="awayPlus3()">+3</button>
                 </div>
+                <p class="dot" id="away-winning"></p>
             </div>
+        </div>
+        <div id="btn">
+            <button id="reset-btn" onclick="resetGame()">New Game</button>
         </div>
         
         <script src="index.js"></script>
